<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemPage">

    <TextView
        android:id="@+id/itemPageItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/itemPageItemNameString"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/itemPageItemPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:maxWidth="250dp"
        android:maxHeight="250dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemPageItemName"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/itemPageItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/itemPageItemPrice"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/itemPageItemPicture"
        app:layout_constraintStart_toStartOf="@id/itemPageItemPicture"
        app:layout_constraintTop_toBottomOf="@id/itemPageItemPicture" />

    <TextView
        android:id="@+id/itemPageItemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/itemPageItemIdTextDisplay"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/itemPageItemPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPageItemName" />

    <TextView
        android:id="@+id/itemPageDescriptionBox"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:fadeScrollbars="true"
        android:gravity="center"
        android:maxWidth="200dp"
        android:maxHeight="100dp"
        android:scrollbars="vertical"
        android:text="@string/itemPageDescription"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/itemPageItemPicture"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/itemPageItemPicture"
        app:layout_constraintTop_toBottomOf="@id/itemPageItemPrice" />

    <Button
        android:id="@+id/itemPageBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/itemOpBackButtonText"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/itemPageAddToCartButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPageDescriptionBox" />

    <Button
        android:id="@+id/itemPageAddToCartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/itemPageItemNameString"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemPageBackButton"
        app:layout_constraintTop_toBottomOf="@+id/itemPageDescriptionBox" />

</androidx.constraintlayout.widget.ConstraintLayout>